syntax = "proto3";

package  msg;

enum CMDID {
    UNKNOWN                   = 0;
    SignIn                    = 1;
    SignInAck                 = 2;
    SubscribeTopic            = 3;
    SubscribeTopicAck         = 4;
    UnsubscribeTopic          = 5;
    UnsubscribeTopicAck       = 6;
    HoldMic                   = 7;
    HoldMicAck                = 8;
    ReleaseMic                = 9;
    ReleaseMicAck             =10;
    SignOut                   =11;
    SignOutAck                =12;
    Audio                     =13;
    Ping                      =14;
    Pong                      =15;
    RemoveMic                 =16;
    RemoveMicAck              =17;
    CreateTemporaryGroup      =18;
    CreateTemporaryGroupAck   =19;
    PullGroupNotice           =20;
    PullGroupNoticeAck        =21;
}

message Msg {
    uint32      mid          = 2;
    CMDID       cmdID        = 3;
    uint32      uid          = 4;
    uint32      tid          = 5;
    AudioData   audioData    = 6;
    sint32      ackCode      = 7;
    string      token        = 8;
}

message AudioData {
    sint32 id              = 1;
    sint32 tpye            = 2;
    uint64 timestamp       = 5;
    bytes  data            = 6;
}