//指定版本
syntax = "proto3";
//包名，通过protoc生成时go文件时
package proto;

message ActionRequest {
    sint32 id           = 1;
    uint64 uid          = 3;
    uint64 gid          = 4;
}